--- a/contest/2020/2020_11.md
+++ b/contest/2020/2020_11.md
@@ -222,3 +222,71 @@ public:
 ### [1658. Minimum Operations to Reduce X to Zero](https://leetcode.com/problems/minimum-operations-to-reduce-x-to-zero/)
 
 ### [1659. Maximize Grid Happiness](https://leetcode.com/problems/maximize-grid-happiness/)
+
+## weekly contest 216
+
+今天实在太困了，没有参加。
+
+### [1662. Check If Two String Arrays are Equivalent](https://leetcode.com/problems/check-if-two-string-arrays-are-equivalent/)
+
+可能是上周的第一题太难了，这周是送分题
+
+```cpp
+class Solution
+{
+public:
+    bool arrayStringsAreEqual(vector<string> &word1, vector<string> &word2)
+    {
+        string str1 = "";
+        string str2 = "";
+        for (auto &word : word1)
+            str1 += word;
+        for (auto &word : word2)
+            str2 += word;
+        return str1 == str2;
+    }
+};
+```
+
+### [1663. Smallest String With A Given Numeric Value](https://leetcode.com/problems/smallest-string-with-a-given-numeric-value/)
+
+经典写垃圾代码
+
+```
+class Solution
+{
+public:
+    string getSmallestString(int n, int k)
+    {
+
+        int remain = n;
+        int value = k;
+        string ret = "";
+
+        while (value - remain + 1 >= 26)
+        {
+            ret += "z";
+            value -= 26;
+            remain -= 1;
+        }
+
+        if (value > 0)
+        {
+            int v = (value - remain + 1) % 26;
+            value -= v;
+            if (v > 0)
+                ret += 'a' + v - 1;
+        }
+        remain--;
+        for (int i = 0; i < remain; i++)
+            ret += 'a';
+
+        reverse(ret.begin(), ret.end());
+        return ret;
+    }
+};
+```
+
+### [1664. Ways to Make a Fair Array](https://leetcode.com/problems/ways-to-make-a-fair-array/)
+
+### [1665. Minimum Initial Energy to Finish Tasks](https://leetcode.com/problems/minimum-initial-energy-to-finish-tasks/)
