--- a/contest/2020/2020_11.md
+++ b/contest/2020/2020_11.md
@@ -290,3 +290,35 @@ public:
 ### [1664. Ways to Make a Fair Array](https://leetcode.com/problems/ways-to-make-a-fair-array/)
 
 ### [1665. Minimum Initial Energy to Finish Tasks](https://leetcode.com/problems/minimum-initial-energy-to-finish-tasks/)
+
+## weekly contest 217
+
+2020.11.28 起晚了，做了第一题吃饭去了。
+
+### [1672. Richest Customer Wealth](https://leetcode.com/problems/richest-customer-wealth/)
+
+```cpp
+class Solution
+{
+public:
+    int maximumWealth(vector<vector<int>> &accounts)
+    {
+
+        int maxsum = 0;
+        for (int i = 0; i < accounts.size(); i++)
+        {
+            int temp = 0;
+            for (int money : accounts[i])
+                temp += money;
+            maxsum = max(temp, maxsum);
+        }
+        return maxsum;
+    }
+};
+```
+
+### [1673. Find the Most Competitive Subsequence](https://leetcode.com/problems/find-the-most-competitive-subsequence/)
+
+### [1674. Minimum Moves to Make Array Complementary](https://leetcode.com/problems/minimum-moves-to-make-array-complementary/)
+
+### [1675. Minimize Deviation in Array](https://leetcode.com/problems/minimize-deviation-in-array/)
