--- a/contest/2020/2020_11.md
+++ b/contest/2020/2020_11.md
@@ -322,3 +322,15 @@ public:
 ### [1674. Minimum Moves to Make Array Complementary](https://leetcode.com/problems/minimum-moves-to-make-array-complementary/)
 
 ### [1675. Minimize Deviation in Array](https://leetcode.com/problems/minimize-deviation-in-array/)
+
+## weekly contest 218
+
+2020.12.06 今天不想学习。每天都不想学习
+
+### [1678. Goal Parser Interpretation](https://leetcode.com/problems/goal-parser-interpretation/)
+
+### [1679. Max Number of K-Sum Pairs](https://leetcode.com/problems/max-number-of-k-sum-pairs/)
+
+### [1680. Concatenation of Consecutive Binary Numbers](https://leetcode.com/problems/concatenation-of-consecutive-binary-numbers/)
+
+### [1681. Minimum Incompatibility](https://leetcode.com/problems/minimum-incompatibility/)
