--- a/contest/2020/2020_11.md
+++ b/contest/2020/2020_11.md
@@ -334,3 +334,36 @@ public:
 ### [1680. Concatenation of Consecutive Binary Numbers](https://leetcode.com/problems/concatenation-of-consecutive-binary-numbers/)
 
 ### [1681. Minimum Incompatibility](https://leetcode.com/problems/minimum-incompatibility/)
+
+## weekly contest 219
+
+2020.12.13 今天睡了懒觉
+
+### [1688. Count of Matches in Tournament](https://leetcode.com/problems/count-of-matches-in-tournament/)
+
+n个队伍打比赛，两两比赛，每次淘汰败者，决出冠军一共要打多少场比赛？
+
+因为要淘汰n-1个队，所以打n-1场。
+
+### [1689. Partitioning Into Minimum Number Of Deci-Binary Numbers]()
+
+```cpp
+class Solution
+{
+public:
+    int minPartitions(string n)
+    {
+        char maxch = '0';
+        for (int i = 0; i < n.size(); i++)
+        {
+            maxch = max(n[i], maxch);
+        }
+
+        return maxch - '0';
+    }
+};
+```
+
+### [1690. Stone Game VII](https://leetcode.com/problems/stone-game-vii/)
+
+### [1691. Maximum Height by Stacking Cuboids](https://leetcode.com/problems/maximum-height-by-stacking-cuboids/)
