--- a/contest/2021/2021_01.md
+++ b/contest/2021/2021_01.md
@@ -33,3 +33,11 @@ public:
 ### [1712. Ways to Split Array Into Three Subarrays](https://leetcode.com/problems/ways-to-split-array-into-three-subarrays/)
 
 ### [1713. Minimum Operations to Make a Subsequence](https://leetcode.com/problems/minimum-operations-to-make-a-subsequence/)
+
+## weekly contest 223
+
+2020.01.10 以后就做后两题吧
+
+### [1722. Minimize Hamming Distance After Swap Operations](https://leetcode.com/problems/minimize-hamming-distance-after-swap-operations/)
+
+### [1723. Find Minimum Time to Finish All Jobs](https://leetcode.com/problems/find-minimum-time-to-finish-all-jobs/)
